--- a/sass/partials/_container.scss
+++ b/sass/partials/_container.scss
@@ -2,6 +2,7 @@
 	display: flex;
 	flex-wrap: wrap;
 	flex-direction: row;
+	justify-content: space-around;
 	width: auto;
 	height: auto;
 	background-color: $white;
