--- a/sass/partials/_nav_page.scss
+++ b/sass/partials/_nav_page.scss
@@ -3,7 +3,6 @@
 	flex-direction: column;
 	max-width: 35%;
 	height: 100%;
-	margin: 10px;
 	background-color: $white;
 	@include border(1px solid black);
 
